# KDD2015wpp

./: .dockerignore  .gitignore  Dockerfile  Makefile  PredictCTR_WR.R  PredictCTR_WR_Fig9.R  PrepareData.R  README.md  WinningPrice.R  WinningPriceCTR.R  WinningPrice_Fig9.R  colClass.R
IPinYouExp/: DESCRIPTION  NAMESPACE  configure  configure.ac
IPinYouExp/R/: FTPRL.R  FTPRLLogisticRegression.R  RcppExports.R  zzz.R
IPinYouExp/src/: FTPRL.hpp  FTPRLProxy.hpp  Matrix.hpp  RcppExports.cpp  dgCMatrixProxy.hpp  online_simulation.cpp
IPinYouExp/tests/: split-equivalent.R  validation-ctr_learner.R
